# api/openapi.yaml
@@ -248,17 +248,11 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/TodoOne"
+              $ref: "#/components/schemas/UpdateTodo"
         required: true
       responses:
         "200":
           description: 成功
-        "400":
-          description: バリデーションエラー
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
         "500":
           description: その他のサーバー側のエラー
           content:
@@ -583,6 +577,30 @@ components:
           type: string
           format: uuid
           example: "123e4567-e89b-12d3-a456-426614174000"
+        title:
+          type: string
+          example: 朝ごはんを食べる
+        todoDetail:
+          type: string
+          example: りんごとパンを食べる
+        startDate:
+          type: string
+          format: 'date-time'
+          example: '2024-10-07T14:30:00'
+          description: 'タスクの開始日時 (年-月-日T時:分:秒形式)'
+        timeRequired:
+            type: integer
+            example: 60
+            description: 'タスクの所要時間'
+        isFinished:
+          type: boolean
+          example: false
+    UpdateTodo:
+      required:
+        - title
+        - isFinished
+      type: object
+      properties:
         title:
           type: string
           example: 朝ごはんを食べる
