# backend/src/todos/todo.controller.ts
@@ -7,8 +7,9 @@ import {
   HttpStatus,
   Param,
   Delete,
+  Patch,
 } from '@nestjs/common';
-import { CreateTodoDTO } from './dto/create-todo.dto';
+import { CreateTodoDTO, UpdateTodoDTO } from './dto/todo.dto';
 import { TodoService } from './todo.service';
 
 @Controller('todo')
@@ -82,6 +83,35 @@ export class TodoController {
         data: todos,
       };
     } catch (err) {
+      throw new HttpException(
+        {
+          message: 'サーバーエラー: ' + err.message,
+        },
+        HttpStatus.INTERNAL_SERVER_ERROR,
+      );
+    }
+  }
+
+  // タスク更新
+  @Patch(':id/update')
+  async updateTodo(@Param('id') id: string, @Body() dto: UpdateTodoDTO): Promise<any> {
+    try {
+      const result = await this.todoService.updateTodo(id, dto);
+
+      if (result.affected === 0) {
+        throw new HttpException(
+          {
+            message: 'Todo not found',
+          },
+          HttpStatus.NOT_FOUND,
+        );
+      }
+
+      return {
+        statusCode: HttpStatus.OK,
+      };
+    } catch (err) {
+
       throw new HttpException(
         {
           message: 'サーバーエラー: ' + err.message,
